# CV_by_Mary

./: pyproject.toml
src/: main.py
src/core/: comp_vision.py  consts.py
